RESOLVED FIXED 75662
Pixel results from DumpRenderTree and WebKitTestRunner don't match because of colorspace issues
https://bugs.webkit.org/show_bug.cgi?id=75662
Summary Pixel results from DumpRenderTree and WebKitTestRunner don't match because of...
Simon Fraser (smfr)
Reported 2012-01-05 15:37:10 PST
Pixel results from DumpRenderTree and WebKitTestRunner don't match, suffer colorspace issues
Attachments
Patch (12.96 KB, patch)
2012-01-05 15:42 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2012-01-05 15:42:02 PST
Simon Fraser (smfr)
Comment 2 2012-01-05 15:42:35 PST
Alexey Proskuryakov
Comment 3 2012-01-05 23:06:58 PST
Comment on attachment 121354 [details] Patch How is this related to bug 72424?
Simon Fraser (smfr)
Comment 4 2012-01-06 09:20:26 PST
The patch here fixes bug 72424 too.
Simon Fraser (smfr)
Comment 5 2012-01-06 09:20:30 PST
*** Bug 72424 has been marked as a duplicate of this bug. ***
mitz
Comment 6 2012-01-06 13:56:30 PST
Comment on attachment 121354 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=121354&action=review > Tools/ChangeLog:3 > + Pixel results from DumpRenderTree and WebKitTestRunner don't match, suffer colorspace issues I think it’s us who suffer. The pixel results are secretly enjoying it. > Tools/DumpRenderTree/mac/PixelDumpSupportMac.mm:55 > + // Creating this bitmap in the device color space should prevent any color conversion when the image of the web view is drawn into it. Can you say “prevents” instead of “should prevent”? Does it not really do what it should do?
Simon Fraser (smfr)
Comment 7 2012-01-06 15:35:23 PST
Darin Adler
Comment 8 2012-01-08 12:15:25 PST
Wow, what a great thing to do! Wish we had done this years ago.
Note You need to log in before you can comment on or make changes to this bug.